--- a/package.json
+++ b/package.json
@@ -16,12 +16,19 @@
     "theme",
     "material"
   ],
-  "author": "Viosey",
-  "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/viosey/hexo-theme-material/issues"
+  "dependencies": {
+    "hexo": "^3.2.0",
+    "hexo-deployer-git": "^0.1.0",
+    "hexo-generator-archive": "^0.1.4",
+    "hexo-generator-category": "^0.1.3",
+    "hexo-generator-index": "^0.2.0",
+    "hexo-generator-tag": "^0.2.0",
+    "hexo-renderer-ejs": "^0.2.0",
+    "hexo-renderer-markdown-it": "^3.4.1",
+    "hexo-renderer-stylus": "^0.3.1",
+    "hexo-server": "^0.2.0",
+    "markdown-it-emoji": "^1.2.0"
   },
-  "homepage": "https://github.com/viosey/hexo-theme-material#readme",
   "devDependencies": {
     "ejs-lint": "^0.2.0",
     "eslint": "^3.14.0",
